# OpenCV-CamCalib

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  app.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: codecov.yml  release.yml
camera_calibrate/gui/: config.py
camera_calibrate/gui/ui/: main_window.ui
camera_calibration/gui/: screenshot_setting.py
camera_calibration/gui/ui/: main_window.py
docs/: index.md  mkdocs.yml  requirements.txt
docs/source/: index.md
docs/source/相机标定和3D重建/: 2. 使用OpenCV进行相机标定.md
docs/相机标定和3D重建/: 1. 创建标定板.md  2. 使用OpenCV进行相机标定.md
opencv_camcalib/: __init__.py  app.py  cli.py  core.py
opencv_camcalib/gui/: app.py  chessboard_calibration.py  config.py  distortion_correction.py  screenshot_setting.py
opencv_camcalib/gui/ui/: chessboard_calibration.py  chessboard_calibration.ui  distortion_correction.py  distortion_correction.ui  main_window.py  main_window.ui  screenshot_setting.py
opencv_camcalib/utils/: gen_pattern.py  svgfig.py
tests/: test_core.py
ui/: screenshot_setting.py  ui_mainwindow.py  ui_mainwindow.ui  ui_screenshot.py  ui_screenshot.ui
