[tool.poetry]
authors = ["XavierJiezou <878972272@qq.com>"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]
description = ""
documentation = "https://github.com/XavierJiezou/OpenCV-CamCalib"
exclude = []
homepage = "https://github.com/XavierJiezou/OpenCV-CamCalib"
include = ["CHANGELOG.md"]
keywords = ["python", "opencv", "camera", "calibration"]
license = "MIT"
name = "opencv-camcalib"
packages = [{include = "opencv_camcalib"}]
readme = "README.md"
repository = "https://github.com/XavierJiezou/OpenCV-CamCalib"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
opencv-python = "^4.6.0"
pyside6 = "^6.3.1"
rich = "^12.5.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pre-commit = "^2.20.0"
pylint = "^2.14.5"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
toml = "^0.10.2"
pyinstaller = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[[tool.poetry.source]]
default = true
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.isort]
filter_files = true
multi_line_output = 3
profile = "black"

[tool.poetry.scripts]
opencv-camcalib = "opencv_camcalib.cli:main"
